--- a/config/database.yml
+++ b/config/database.yml
@@ -17,13 +17,14 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: dbtech
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: statspanel_backend_development
+  database: statspanel_dev
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: statspanel_backend_test
+  database: statspanel_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: statspanel_backend_production
-  username: statspanel_backend
+  database: statspanel_prod
+  username: dbtech
   password: <%= ENV['STATSPANEL_BACKEND_DATABASE_PASSWORD'] %>
